--- a/frontend/public/mujer.html
+++ b/frontend/public/mujer.html
@@ -317,6 +317,7 @@
       <a href="mujer.html" aria-current="page">Mujer</a>
       <a href="hombre.html">Hombre</a>
       <a href="ninos.html">Niños</a>
+      <a href="novedades.html">Novedades</a>
       <a href="ayuda.html">Ayuda</a>
     </nav>
   </header>
@@ -394,7 +395,7 @@
           <li><a href="mujer.html" style="color:#adb5bd;text-decoration:none;">Ropa para Mujer</a></li>
           <li><a href="hombre.html" style="color:#adb5bd;text-decoration:none;">Ropa para Hombre</a></li>
           <li><a href="ninos.html" style="color:#adb5bd;text-decoration:none;">Ropa para Niños</a></li>
-          <li><a href="index.html#novedades" style="color:#adb5bd;text-decoration:none;">Novedades</a></li>
+          <li><a href="novedades.html" style="color:#adb5bd;text-decoration:none;">Novedades</a></li>
           <li><a href="index.html#ofertas" style="color:#adb5bd;text-decoration:none;">Ofertas</a></li>
         </ul>
       </div>
@@ -420,6 +421,7 @@
   <script src="assets/js/slugify.js"></script>
   <script src="assets/js/cart.js"></script>
   <script src="assets/js/verano-order.js"></script>
+  <script src="assets/js/catalog-relevance-order.js"></script>
   <script src="assets/js/season-filter.js"></script>
 
   <script>
@@ -460,12 +462,12 @@
       { key:"azul",       label:"Azul",       hex:"#007bff", aliases:["azul","azul jaspeado","azul oscuro","azul marino"] },
       { key:"rosa",       label:"Rosa",       hex:"#ff69b4", aliases:["rosa","fucsia"] },
       { key:"verde",      label:"Verde",      hex:"#28a745", aliases:["verde","verde jaspeado"] },
-      { key:"rojo",       label:"Rojo",       hex:"#dc3545", aliases:["rojo","rojo jaspeado","bordo"] },
-      { key:"morado",     label:"Violeta",    hex:"#6f42c1", aliases:["violeta","morado","lila","purpura"] },
-      { key:"naranja",    label:"Naranja",    hex:"#fd7e14", aliases:["naranja","coral"] },
-      { key:"amarillo",   label:"Amarillo",   hex:"#ffc107", aliases:["amarillo","mostaza"] },
-      { key:"marron",     label:"Marron",     hex:"#795548", aliases:["marron","chocolate","caqui","camel","beige"] },
-      { key:"gris",       label:"Gris",       hex:"#adb5bd", aliases:["gris","gris jaspeado","gris oscuro","plomo"] },
+      { key:"rojo",       label:"Rojo",       hex:"#dc3545", aliases:["rojo","rojo jaspeado"] },
+      { key:"morado",     label:"Violeta",    hex:"#6f42c1", aliases:["violeta","morado","purpura"] },
+      { key:"naranja",    label:"Naranja",    hex:"#fd7e14", aliases:["naranja"] },
+      { key:"amarillo",   label:"Amarillo",   hex:"#ffc107", aliases:["amarillo"] },
+      { key:"marron",     label:"Marron",     hex:"#795548", aliases:["marron","chocolate","caqui"] },
+      { key:"gris",       label:"Gris",       hex:"#adb5bd", aliases:["gris","gris jaspeado","gris oscuro","gris medio"] },
     ];
 
     const COLOR_BY_KEY = {};
@@ -680,6 +682,7 @@
       const price = Number(p.price||0).toLocaleString('es-AR');
       const detailsLink = detailHref(p);
       const stock = estimateStock(p);
+      const stockLabel = stock <= 0 ? 'Agotado' : (stock <= 3 ? 'Por agotarse' : 'Disponible');
 
       const article = document.createElement('article');
       article.className = 'card';
@@ -697,7 +700,7 @@
       const subtitle = document.createElement('div'); subtitle.className = 'subtitle'; const secTxt = p.section ? (String(p.section).charAt(0).toUpperCase()+String(p.section).slice(1)) : ''; subtitle.textContent = [secTxt, p.type || ''].filter(Boolean).join(' | ');
       const row = document.createElement('div'); row.className = 'row';
       const priceEl = document.createElement('div'); priceEl.className = 'price'; priceEl.textContent = '$' + price;
-      const stockEl = document.createElement('div'); stockEl.className = 'stock'; stockEl.innerHTML = 'Disponible<small>Stock: ' + esc(String(stock)) + '</small>';
+      const stockEl = document.createElement('div'); stockEl.className = 'stock'; stockEl.textContent = stockLabel;
       row.appendChild(priceEl); row.appendChild(stockEl);
 
       const actions = document.createElement('div'); actions.className = 'actions';
@@ -896,6 +899,7 @@
       if (sort === 'price-asc') view.sort((a,b)=> (Number(a.price||0) - Number(b.price||0)));
       else if (sort === 'price-desc') view.sort((a,b)=> (Number(b.price||0) - Number(a.price||0)));
       else if (sort === 'verano' && typeof applyVeranoOrder === 'function') view = applyVeranoOrder(view);
+      else if (sort === 'relevance' && typeof applyCatalogRelevanceOrder === 'function') view = applyCatalogRelevanceOrder(view, SECTION);
 
       applyView();
       updateActiveFiltersUI();
@@ -1054,8 +1058,7 @@
         renderFilterGroup('seasons', filterOptions.seasons);
         renderFilterGroup('sizes', filterOptions.sizes);
         renderFilterGroup('colors', filterOptions.colors);
-        applyView();
-        updateActiveFiltersUI();
+        aplicarFiltros();
       } catch (e) {
         const grid = document.getElementById('grid');
         grid.innerHTML = '<p>Error al cargar productos.</p>';
