--- a/frontend/public/cart.html
+++ b/frontend/public/cart.html
@@ -47,8 +47,6 @@
     .cart-right .remove { color:#dc3545; background:#fff; border:1px solid #f1a6ad; border-radius:8px; padding:6px 8px; cursor:pointer; }
     .cart-summary { margin-top:14px; display:flex; align-items:center; justify-content:space-between; gap:10px; padding-top:12px; border-top:1px solid #e9ecef; }
     .cart-summary .left { text-align:left; color:#6c757d; }
-    .cart-summary .right { display:flex; align-items:baseline; gap:8px; }
-    .cart-total-amount { font-size:1.2rem; font-weight:900; color:#1b1f24; }
     .cart-actions-row { margin-top:12px; display:flex; gap:10px; justify-content:flex-end; }
     .btn { padding:10px 16px; border-radius:10px; border:1px solid #e9ecef; background:#fff; font-weight:800; cursor:pointer; display:inline-flex; align-items:center; gap:8px; }
     .btn-primary { background: linear-gradient(135deg, var(--primary), var(--secondary)); color:#fff; border:none; }
@@ -101,6 +99,7 @@
       <a href="mujer.html">Mujer</a>
       <a href="hombre.html">Hombre</a>
       <a href="ninos.html">Niños</a>
+      <a href="novedades.html">Novedades</a>
       <a href="ayuda.html">Ayuda</a>
     </nav>
   </header>
@@ -116,10 +115,6 @@
           <div class="left">
             <div>Total de productos: <span id="cart-count-display">0</span></div>
             <button id="cart-clear-btn" type="button" class="link-danger">Vaciar carrito</button>
-          </div>
-          <div class="right">
-            <div class="cart-total-label">Total:</div>
-            <div class="cart-total-amount">$<span id="cart-total">0</span></div>
           </div>
         </div>
         <div class="cart-actions-row">
@@ -138,7 +133,7 @@
           <li><a href="mujer.html" style="color:#adb5bd;text-decoration:none;">Ropa para Mujer</a></li>
           <li><a href="hombre.html" style="color:#adb5bd;text-decoration:none;">Ropa para Hombre</a></li>
           <li><a href="ninos.html" style="color:#adb5bd;text-decoration:none;">Ropa para Niños</a></li>
-          <li><a href="index.html#novedades" style="color:#adb5bd;text-decoration:none;">Novedades</a></li>
+          <li><a href="novedades.html" style="color:#adb5bd;text-decoration:none;">Novedades</a></li>
           <li><a href="index.html#ofertas" style="color:#adb5bd;text-decoration:none;">Ofertas</a></li>
         </ul>
       </div>
@@ -197,7 +192,7 @@
 
     const CART_ALERT_ID = 'cart-alert';
     const POST_ORDER_MESSAGE = 'Pedido enviado correctamente';
-    const POST_ORDER_SUBTITLE = 'Tu carrito se vació y el stock se actualizó con éxito.';
+    const POST_ORDER_SUBTITLE = 'La disponibilidad de los productos está sujeta a stock al momento de la confirmación por parte del vendedor.';
     const POST_ORDER_BUTTON_LABEL = 'Seguir comprando';
     let orderStatus = null;
     let orderInProgress = false;
@@ -388,13 +383,11 @@
     function renderCart(){
       const cart = window.romixCart.getCart();
       const list = document.getElementById('cart-list');
-      const totalEl = document.getElementById('cart-total');
       const countDisplay = document.getElementById('cart-count-display');
       const badge = document.getElementById('cart-count');
       const orderBtn = document.getElementById('order-btn');
       const clearBtn = document.getElementById('cart-clear-btn');
-      const { totalItems, totalPrice } = window.romixCart.getCartTotals(cart);
-      totalEl.textContent = totalPrice.toLocaleString('es-AR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+      const { totalItems } = window.romixCart.getCartTotals(cart);
       countDisplay.textContent = String(totalItems);
       if (badge) badge.textContent = String(totalItems);
       list.innerHTML = '';
