--- a/frontend/public/catalogo.html
+++ b/frontend/public/catalogo.html
@@ -102,6 +102,7 @@
   </script>
   <script src="assets/js/slugify.js"></script>
   <script src="assets/js/cart.js"></script>
+  <script src="assets/js/products-store.js"></script>
   <script>
     let romixToastTimer;
 
@@ -276,7 +277,7 @@
               <div class="subtitle">${subtitle}</div>
               <div class="row">
                 <div class="price">${formatPrice(product.price)}</div>
-                <div class="stock ${stockLabel === 'Agotado' ? 'stock-out' : ''}">${stockLabel}<small>Stock total: ${stockTotal}</small></div>
+                <div class="stock ${stockLabel === 'Agotado' ? 'stock-out' : ''}">${stockLabel}</div>
               </div>
               <div class="actions">
                 <a class="btn btn-details" href="${buildHref(product)}" aria-label="Ver detalles de ${product.name || 'producto'}"><i class="fas fa-info-circle" aria-hidden="true"></i> Ver Detalles</a>
@@ -311,7 +312,14 @@
       async function loadProducts(){
         const cached = parsePreloaded();
         if (cached && cached.length) return cached;
-        const response = await fetch(new URL(DATA_URL, location.href), { cache: 'no-store' });
+        if (window.romixProductsStore && typeof window.romixProductsStore.load === 'function') {
+          const list = await window.romixProductsStore.load({
+            preloadedScriptId: 'preloaded-products',
+            dataUrl: DATA_URL
+          });
+          return filterVisibleProducts(list);
+        }
+        const response = await fetch(new URL(DATA_URL, location.href));
         if (!response.ok) throw new Error('HTTP ' + response.status);
         const json = await response.json();
         return filterVisibleProducts(Array.isArray(json) ? json : []);
@@ -355,6 +363,7 @@
           <li><a href="mujer.html">Mujer</a></li>
           <li><a href="hombre.html">Hombre</a></li>
           <li><a href="ninos.html">Niños</a></li>
+          <li><a href="novedades.html">Novedades</a></li>
           <li><a href="ayuda.html">Ayuda</a></li>
         </ul>
       </nav>
